--- a/VolatileAIO/VolatileAIO/VolatileAIO.csproj
+++ b/VolatileAIO/VolatileAIO/VolatileAIO.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="Extensions\ADC\Tristana.cs" />
     <Compile Include="Extensions\Jungle\Evelynn.cs" />
+    <Compile Include="Extensions\Jungle\LeeSin.cs" />
     <Compile Include="Extensions\Mid\Annie.cs" />
     <Compile Include="Extensions\Mid\Brand.cs" />
     <Compile Include="Extensions\Mid\Cassiopeia.cs" />
